syntax = "proto3";

package blockchain;
option go_package = "blockchain";


message Block {
  int64 Index = 1;
  string Timestamp = 2;
  int64 VAL = 3;
  string Hash = 4;
  string PrevHash = 5;
  int64 Difficulty = 6;
  string Nonce = 7;
}

message BlockRequest {
    int64 Index = 1;
}

service BookService {
  rpc GetBlock(BlockRequest) returns (Block) {}
}